core_platform/runtime_governance/network/platform-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: platform-network-policy
  namespace: platform

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              layer: platform

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              layer: platform
